--- a/zappa_settings.json
+++ b/zappa_settings.json
@@ -1,5 +1,5 @@
 {
-    "dev": {
+    "test": {
         "app_function": "app.webapp",
         "aws_region": "us-east-1",
         "profile_name": "default",
